tests/snapshots/output_format__added_file_format.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/new_file.rs b/new_file.rs
new file mode 100644
--- /dev/null
+++ b/new_file.rs
@@ -1,3 +1,4 @@
 line1
+added
 line2
 line3
