tests/snapshots/output_format__ansi_stripped_before_parse.snap
---
source: tests/output_format.rs
expression: output
---
diff --git a/src/foo.rs b/src/foo.rs
--- a/src/foo.rs
+++ b/src/foo.rs
@@ -1,3 +1,4 @@
 line1
+added
 line2
 line3
