tests/snapshots/output_format__branching_folders_not_merged.snap
---
source: tests/output_format.rs
expression: folder_items(&app)
---
[
    (
        "src/app",
        0,
    ),
    (
        "src/app/components",
        1,
    ),
    (
        "src/app/utils",
        1,
    ),
]
