tests/snapshots/output_format__copied_file.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/orig.rs b/copy.rs
similarity index 95%
copy from orig.rs
copy to copy.rs
--- a/orig.rs
+++ b/copy.rs
@@ -1,3 +1,4 @@
 line1
+added
 line2
 line3
