tests/snapshots/output_format__deep_merge_chain.snap
---
source: tests/output_format.rs
expression: folder_items(&app)
---
[
    (
        "a/b/c/d",
        0,
    ),
]
