tests/snapshots/output_format__deleted_file_format.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/old_file.rs b/old_file.rs
deleted file mode 100644
--- a/old_file.rs
+++ /dev/null
@@ -1,3 +0,0 @@
-line1
-line2
-line3
