tests/snapshots/output_format__file_view_half_page_navigation.snap
---
source: tests/output_format.rs
expression: "trace_file_view_nav(&mut app, &[\"j\", \"j\", \"k\"])"
---
start: cursor=0 item=hunk_header(0)
    j: cursor=5 item=hunk_line(0,4)
    j: cursor=10 item=hunk_line(1,3)
    k: cursor=5 item=hunk_line(0,4)
