tests/snapshots/output_format__file_view_render_after_toggle.snap
---
source: tests/output_format.rs
expression: "render_app(&mut app, 60, 20)"
---
"┌ src/main.rs  M  +2 -0 ───────────────────────────────────┐"
"│┌ [✓] +1 -0  @@ -1,4 +1,5 @@                              │"
"│┌ [ ] +1 -0  @@ -20,3 +21,4 @@                            │"
"││   20   fn shutdown() {                                  │"
"││   22 +     flush_logs();                                │"
"││   21       cleanup();                                   │"
"│└   22   }                                                │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" 0/5 files confirmed                                        "
