tests/snapshots/output_format__file_view_render_at_top.snap
---
source: tests/output_format.rs
expression: "render_app(&mut app, 60, 20)"
---
"┌ app/core/engine/processor.rs  M  +1 -0 ──────────────────┐"
"│┌ [ ] +1 -0  @@ -1,5 +1,6 @@                              │"
"││    1   fn process() {                                   │"
"││    2 +     validate_input();                            │"
"││    2       let data = fetch();                          │"
"││    3       transform(data);                             │"
"││    4       store(data);                                 │"
"│└    5   }                                                │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" 0/5 files confirmed                                        "
